using commons-codec instead of sun ones. corrected a hardwirred path into the void in build.xml